# sockc

./: CMakeLists.txt  README.md  android-libpecar.so-deployment-settings.json  pecar.pro  qrc_qml.cpp
etc/: pecar.conf  sockc.conf
src/: Authenticater.cpp  Authenticater.hpp  Authority.hpp  Buffer.hpp  Bus.hpp  Channel.cpp  Channel.hpp  Config.cpp  Config.hpp  Crypto.hpp  Driver.cpp  Outlet.hpp  Pool.hpp  Portal.cpp  Portal.hpp  crypto  main.cpp  predef.hpp  processData.cpp  socket_server.hpp
src/sockc/: Buffer.cpp  Bus.hpp  Channel.hpp  Config.cpp  Config.hpp  Traits.hpp  main.cpp  predef.hpp  sockc.pri
src/ui/: AssistCheckBox.qml  Interact.cpp  Interact.hpp  LabelText.qml  LargeTextField.qml  LayoutRow.qml  MainForm.ui.qml  ServerModel.qml  TextLink.qml  aside.js  deployment.pri  main.cpp  main.qml  qml.qrc  ui.pri
src/ui/i18n/: zh_CN.qm
src/ui/ts/: MainForm.ui.ts  main.ts  qml.ts  zh_CN.ts  zh_CN.txt
test/: AndroidManifest.xml  genpac.pac  tcp-lo-10022.pcapng
